third_party/move/move-compiler-v2/tests/reference-safety/v1-tests/move_field_invalid.old.exp

Diagnostics:
error: cannot move local `s` which is still borrowed
   ┌─ tests/reference-safety/v1-tests/move_field_invalid.move:13:9
   │
12 │         let f = &s.f;
   │                 ----
   │                 ││
   │                 │previous local borrow
   │                 used by field borrow
13 │         move s;
   │         ^^^^^^ moved here
14 │         *f;
   │         -- conflicting reference `f` used here

error: cannot move local `s` which is still borrowed
   ┌─ tests/reference-safety/v1-tests/move_field_invalid.move:18:9
   │
17 │         let f = &mut s.f;
   │                 --------
   │                 │    │
   │                 │    previous mutable local borrow
   │                 used by mutable field borrow
18 │         move s;
   │         ^^^^^^ moved here
19 │         *f;
   │         -- conflicting reference `f` used here

error: cannot move local `s` which is still borrowed
   ┌─ tests/reference-safety/v1-tests/move_field_invalid.move:23:9
   │
22 │         let f = id(&s.f);
   │                    ----
   │                    ││
   │                    │previous local borrow
   │                    used by field borrow
23 │         move s;
   │         ^^^^^^ moved here
24 │         *f;
   │         -- conflicting reference `f` used here

error: cannot move local `s` which is still borrowed
   ┌─ tests/reference-safety/v1-tests/move_field_invalid.move:28:9
   │
27 │         let f = id_mut(&mut s.f);
   │                        --------
   │                        │    │
   │                        │    previous mutable local borrow
   │                        used by mutable field borrow
28 │         move s;
   │         ^^^^^^ moved here
29 │         *f;
   │         -- conflicting reference `f` used here
